2009-01-13  Gordon Williams <gordon.williams@collabora.co.uk>
	* src/util/hd-gtk-utils.c:
	  Added flag to force 16 bit textures when loaded from GTK (was 32 
          bit previously)
        * debian/control:
	  Increase version requirement for clutter

2009-01-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.h
	* src/mb/hd-comp-mgr.c:
	  Stopped Notes blurring the background
	  Stopped update_area when in task launcher (eg. from applets) as it
	  is hard to update the blur texture properly.

	* src/tidy/tidy-blur-group.c:
	  Added Pierre-Luc's modified blur shader that compiles under GL

2009-01-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c:
	  Fixed problem where while buttons weren't visible in FKB, they
	  could still be pressed

2009-01-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c:
	  Fixed status area + button problem over FKB by looking for
	  fullscreen flag on windows above the status area window

2009-01-13  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.16

2009-01-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c:
	* src/home/hd-render-manager.h:
	  Beginnings of status area over FKB fix, and fix for blurred launcher
	  button inside task navigator.

2009-01-13  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.15

2009-01-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-switcher.c
	* data/launcher-button-highlight.png:
	  Changed highlight method so we don't use transparancy and can get
	  out full colour depth (bug 97591)
	* src/util/hd-gtk-utils.c:
	  Added fixme for a place where 32 bit textures are still created.
	* src/home/hd-render-manager.c:
	  Made status area and buttons be blurred when background is blurred,
	  by adding the blur_front group, which stayus in home_blur, but is
	  in front of apps.
