@@ -12,6 +12,7 @@ mb_h =		hd-atoms.h			\
 		hd-dialog.h			\
 		hd-home-applet.h		\
 		hd-theme.h			\
+		hd-decor.h			\
 		hd-applet-layout-manager.h
 
 mb_c = 		hd-atoms.c			\
@@ -26,6 +27,7 @@ mb_c = 		hd-atoms.c			\
 		hd-dialog.c			\
 		hd-home-applet.c		\
 		hd-theme.c			\
+		hd-decor.c			\
 		hd-applet-layout-manager.c
 
 noinst_LIBRARIES = libmb.a
